# Airbnb_clone

./: LICENSE  Python_recap.py  README.md  pyproject.toml
Backend/: README.md  Text.txt  Theory.py  Theory.txt  manage.py  pyproject.toml  test.py
Backend/airbnb_backend/: asgi.py  settings.py  urls.py  wsgi.py
Backend/airbnb_backend/templates/: index.html
Backend/bookings/: admin.py  apps.py  models.py
Backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_guests.py  0002_initial.py  0003_initial.py  0004_initial.py
Backend/categories/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/categories/migrations/: 0001_initial.py  0002_alter_category_id.py  0003_alter_category_id.py  0004_alter_category_options.py
Backend/common/: models.py
Backend/config/: settings.py  urls.py
Backend/direct_messages/: admin.py  apps.py  models.py
Backend/direct_messages/migrations/: 0001_initial.py  0002_initial.py
Backend/experiences/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0002_initial.py
Backend/houses/: admin.py  apps.py  models.py
Backend/houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  (+2 more)
Backend/medias/: admin.py  apps.py  models.py
Backend/reviews/: admin.py  models.py
Backend/rooms/: admin.py  models.py  serilalizers.py  urls.py  views.py
Backend/users/: admin.py  models.py  serializers.py
Backend/wishlists/: admin.py  apps.py  models.py
(+37 files in other folders)
