[tool.poetry]
name = "airbnb-poetry"
version = "0.1.0"
description = "airbnb클론을 위한 pyproject.toml 생성"
authors = ["Daniel_sxxnt <shj1103s@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
