[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = "Poetry init"
authors = ["Daniel_sxxnt <shj1103s@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
