[project]
name = "codespaces-django"
version = "0.1.0"
description = "Airbnb clone"
authors = [
    {name = "Daniellll",email = "shj1103s@naver.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
